define interface, setup cmake and build a mock to test idea

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,17 @@
-﻿# CMakeList.txt : CMake project for autobot, include source and define
-# project specific logic here.
+﻿# CMakeList.txt : Top-level CMake project file, do global configuration
+# and include sub-projects here.
 #
 cmake_minimum_required (VERSION 3.8)
 
-# Add source to this project's executable.
-add_executable (autobot "autobot.cpp" "autobot.h")
+project ("connectivity")
+#set(CMAKE_C_COMPILER /usr/bin/gcc)
+#set(CMAKE_CXX_COMPILER /usr/bin/g++)
+set(CMAKE_BUILD_TYPE Debug)
+# thus include <interface/xxx.h> will work
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}) 
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH})
+# Include sub-projects.
+add_subdirectory ("interface")
+add_subdirectory ("lib")
+add_subdirectory ("app")
 
-# TODO: Add tests and install targets if needed.
