finish the producer

--- a/lib/kafka/BUILD
+++ b/lib/kafka/BUILD
@@ -10,8 +10,9 @@ cc_library(
     ]),
     visibility = ["//visibility:public"],
     deps = [
-        "//lib/tcpconnection:tcp_lib",
-         "//lib/config:config_lib",
+        "//message:message",
+        "//interface:interface",
+        "//lib/config:config_lib",
         "@com_github_google_glog//:glog",
         "@com_github_morganstanley_moderncppkafka//:modern_cpp_kafka"
     ],
