--- a/test/config/BUILD
+++ b/test/config/BUILD
@@ -4,8 +4,8 @@ cc_test (
         "Configuration_test.cpp",
     ],
     deps = [
-        "@gtest//:gtest",
-        "@gtest//:gtest_main",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
         "//lib/config:config_lib",
         "@com_github_google_glog//:glog",
     ],
