finish avro integration, add grpc dependency, kick off the service layer

--- a/message/BUILD
+++ b/message/BUILD
@@ -3,10 +3,13 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 cc_library(
     name = "message",
     srcs = glob([
+        "avro/*.cpp",
         "commonjson/*.cpp",
         "MessageFacotry.cpp",
     ]),
     hdrs = glob([
+        "avro/*.h"
+     ]) +glob([
         "commonjson/*.h"
     ]) + glob([
         "*.h"
@@ -15,5 +18,6 @@ cc_library(
     deps = [
         "//interface:interface",
         "@com_github_jsoncpp//:jsoncpp",
+        "@avro_archive//:avro",
     ],
 )
