add custom comparator and unit test

--- a/lib/engine/BUILD
+++ b/lib/engine/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//message:message",
         "//lib/config:config_lib",
         "//lib/kafka:kafka_lib",
+        "@boost//:lexical_cast",
         "@com_github_google_glog//:glog",
         "@com_github_facebook_rocksdb//:rocksdb",
     ],
